<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#4C80AD"
    android:orientation="vertical">
    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
       android:layout_marginTop="100dp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/btn"
        android:drawableLeft="@drawable/ic_stat_name"
        android:elevation="@dimen/_5sdp"
        android:hint="@string/Email"
        android:inputType="text"
        android:padding="@dimen/_20sdp" />
    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/btn"
        android:drawableLeft="@drawable/ic_action_name"
        android:elevation="@dimen/_5sdp"
        android:hint="@string/Passward"
        android:inputType="textPassword"
        android:padding="@dimen/_20sdp"
        app:passwordToggleEnabled="true" />
    <Button
        android:id="@+id/button2"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/btn"
        android:backgroundTint="#E91E63"
        android:onClick="clickActionButton1"
        android:text="@string/Sign_in"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/btn"
        android:onClick="clickActionButton2"
        android:text="@string/Sign_UP"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold" />
</LinearLayout>