<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/wheelbg1">
    <Button
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_gravity="center"
        android:background="@drawable/underworld_button3"
        android:textColor="#653F0E"
        android:text= "@string/ChooseFeeling"
        android:textSize="@dimen/_25ssp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_10sdp"/>
    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <Button
                android:id="@+id/angry_surprise"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/button2"
                android:textColor="#FFFFFF"
                android:layout_marginRight="@dimen/_10sdp"
                android:text= "@string/angry_surprise"
                android:textSize="@dimen/_25ssp"
                />
            <Button
                android:id="@+id/angry_happiness"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/button1"
                android:textColor="#FFFFFF"
                android:layout_marginRight="@dimen/_10sdp"
                android:text= "@string/angry_happiness"
                android:textSize="@dimen/_25ssp"
                />
            <Button
                android:id="@+id/angry_disgust"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/button2"
                android:textColor="#FFFFFF"
                android:layout_marginRight="@dimen/_10sdp"
                android:text= "@string/angry_disgust"
                android:textSize="@dimen/_25ssp"
                />
            <Button
                android:id="@+id/fear_disgust"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/button1"
                android:textColor="#FFFFFF"
                android:layout_marginRight="@dimen/_10sdp"
                android:text= "@string/fear_disgust"
                android:textSize="@dimen/_25ssp"
                />
            <Button
                android:id="@+id/fear_happy"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/button2"
                android:textColor="#FFFFFF"
                android:layout_marginRight="@dimen/_10sdp"
                android:text= "@string/fear_happy"
                android:textSize="@dimen/_25ssp"
                />
            <Button
                android:id="@+id/fear_surprise"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/button1"
                android:textColor="#FFFFFF"
                android:layout_marginRight="@dimen/_10sdp"
                android:text= "@string/fear_surprise"
                android:textSize="@dimen/_25ssp"
                />
            <Button
                android:id="@+id/finish2"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/twf_back"
                android:layout_marginRight="@dimen/_28sdp"
                android:gravity="right"
                android:layout_gravity="right"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>

