<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/choose_leavel"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:gravity="center"
            android:text="@string/chooseLevel"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_30ssp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/firstLevel"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginTop="@dimen/_150sdp"
            android:background="@drawable/plank"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="@dimen/_28sdp"
            android:text= "@string/firstLevel"
            android:textSize="@dimen/_30ssp"
            />
        <Button
            android:id="@+id/secondLevel"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/plank"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="@dimen/_28sdp"
            android:text= "@string/secondLevel"
            android:textSize="@dimen/_27ssp"
            />
        <Button
            android:id="@+id/finish"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_70sdp"
            android:background="@drawable/twf_back"
            android:layout_marginRight="@dimen/_28sdp"
            android:layout_gravity="bottom|right"

            />
    </LinearLayout>
